<resources>
    <string name="app_name">Game Center</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Signup</string>
    <string name="welcome">Welcome to the Game Center</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="select_game">Select which game to play:</string>
    <string name="sliding_tiles">Sliding Tiles</string>
    <string name="snake">Snake</string>
    <string name="blocks">Blocks</string>
    <string name="view_scoreboards">View Scoreboards</string>
    <string name="load_game">Load Game</string>
    <string name="new_game">New Game</string>
    <string name="save_game">Save Game</string>
    <string name="button_undo">Undo</string>
    <string name="button_undo_number"># of moves to undo</string>
    <string name="create_account">Create Account</string>
    <string name="load_auto_save">Load Auto Save</string>
    <string name="scoreboard_title">Scoreboard of User</string>
    <string name="scoreboards">Scoreboards</string>
    <string name="per_user">Per-User</string>
    <string name="per_game">Per-Game</string>
    <string name="complexity">Complexity</string>
    <string name="SnakeGameText">Welcome to snake. Get your Pyth ON.</string>
</resources>
