<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="fall2018.csc2017.GameCenter.GameCenter.blocks.activities.BlocksMenuActivity">

    <Button
        android:id="@+id/LoadBlocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="288dp"
        android:text="@string/load_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/NewGameBlocks"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/SaveBlocks"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="140dp"
        android:text="@string/save_game"
        app:layout_constraintBottom_toTopOf="@+id/UndoBlocks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/NewGameBlocks"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.714" />

    <Button
        android:id="@+id/NewGameBlocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="52dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toTopOf="@+id/LoadAutoSaveBlocks"
        app:layout_constraintEnd_toStartOf="@+id/SaveBlocks"
        app:layout_constraintStart_toEndOf="@+id/LoadBlocks"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/LoadAutoSaveBlocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="188dp"
        android:text="@string/load_auto_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoadBlocks"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/NumUndoBlocks"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="81dp"
        android:ems="10"
        android:hint="@string/button_undo_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/UndoBlocks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoadAutoSaveBlocks" />

    <Button
        android:id="@+id/UndoBlocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="81dp"
        android:onClick="undoMoves"
        android:text="@string/button_undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/NumUndoBlocks"
        app:layout_constraintTop_toBottomOf="@+id/LoadAutoSaveBlocks" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="241dp"
        android:layout_height="311dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/LoadBlocks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blocksmascot" />

</android.support.constraint.ConstraintLayout>
